2009-02-05  Michael Wiegand <michael.wiegand@intevation.de>

	* libopenvas/ids_send.c (which_ttl): Added RATS ignore and a comment
	explaining the rationale.

2009-02-05  Michael Wiegand <michael.wiegand@intevation.de>

	* libopenvas/system.c (erealloc): Removed misleading comment; the
	function is indeed defined in libopenvas/system.h and is used in a
	number of places in openvas-libraries.

2009-02-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Cosmetics and documentation in kb module.

	* libopenvas/kb.c: Added empty lines in comment blocks to improve
	readability (thanks matt), added briefs to comment blocks, removed
	/* within a comment block to avoid compiler warning (thanks michael),
	donated return types own line.

2009-02-02  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* include/config.h.in: Removed define of "DEFAULT_PORT"
	which is not used anywhere (it defaulted to ancient 3001).
	Removed define of "CLIENT_TIMEOUT". It is not used anywhere.
	Removed define of "SERVER_TIMEOUT". It is not used anywhere.
	Removed define of "LOGMORE". It is not used anywhere.
	Removed define of "NESSUSD_KEYFILE", "NESSUSD_USRKEYS",
	"NESSUSD_KEYLENGTH" and "NESSUSD_MAXPWDFAIL".  These are
	not used anywhere.
	Removed define of "PLUGIN_TIMEOUT". It is not used in
	this module.
	Removed define of "LOG_WHOLE_ATTACK". It is not used in
	this module.

2009-02-02  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Removed any code path that is conditional to "ENABLE_RHLST".
	It was never used, especially because it would require a file
	"rhlst.h" which isn't present at all.

	* libopenvas/hlst.h: Removed any code path that
	is conditional to "ENABLE_RHLST".

	* libopenvas/hlst.c: Removed any code path that
	is conditional to "ENABLE_RHLST".

	* include/config.h.in: Removed undef for ENABLE_RHLST.

2009-02-02  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Some cleanups. Basically removing never-used code.
